Adicionado CDN para teste privado apenas

--- a/entityRelationship.html
+++ b/entityRelationship.html
@@ -6,7 +6,7 @@
 <meta name="description" content="Interactive entity-relationship diagram or data model diagram implemented by GoJS in JavaScript for HTML." />
 <!-- Copyright 1998-2018 by Northwoods Software Corporation. -->
 <meta charset="UTF-8">
-<script src="./lib/go.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gojs/1.8.32/go.js"></script>
 <script src="./lib/goSamples.js"></script>  <!-- this is only for the GoJS Samples framework -->
 <script id="code">
   function init() {
